--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -282,7 +282,6 @@ nav.blur-bg-light {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items: center;
   background: #333;
   color: var(--light);
 }
@@ -307,10 +306,36 @@ nav.blur-bg-light {
   line-height: 1.5em;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
+  position: fixed;
+  bottom: 0;
+  bottom: -370px;
+  transition: all 1s;
 }
 
-.column-author_container > img {
+.column-author_container.toggle-me {
+  bottom: 0px;
+}
+
+.floating-btn {
+  background: var(--primary);
+  padding: 10px 20px;
+  border-radius: 0 10px 0 0;
+  cursor: pointer;
+  color: var(--light);
+}
+
+.profile {
+  background: var(--secondary);
+  border-radius: 0 10px 0 0;
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: var(--light);
+}
+
+.column-author_container img {
   width: 250px;
 }
 
@@ -347,13 +372,6 @@ nav.blur-bg-light {
   background: #1da1f2;
   width: 25px;
   height: 25px;
-}
-
-.url_container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  width: 50%;
 }
 /* Responsive Breakpoint */
 
@@ -413,15 +431,5 @@ nav.blur-bg-light {
   .shop-item {
     width: 49%;
     margin-bottom: 15px;
-  }
-
-  .footer_container {
-    flex-direction: column;
-  }
-
-  .url_container {
-    flex-direction: row;
-    width: 100%;
-    padding-bottom: 20px;
   }
 }
